src/components/education/education.scss
@import "../../global.scss";


.education {
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    z-index: 0;
    transition: all 0.7s ease;

    h1 {
        position: absolute;
        font-size: 50px;
        font-weight: 300;
        top: 80px;
        color: black;

        @include mobile {
          font-size: 40px;
        }
    }

    .slider {
        margin-top: 150px;
        display: flex;
        flex-direction: column;

        .container {
            display: flex;
            align-items: center;
            justify-content: center;

            .item {
                width: 40%;
                background-color: white;
                border-radius: 20px;
                display: flex;
                flex-direction: column;
                border: 3px solid lightblue;
                margin: 25px;
                z-index: 1;
                padding: 50px;

                @include mobile {
                  width: 90%;
                  height: 75%;
                  margin-top: 50px;
                }

                @include ipad {
                  width: 75%;
                  height: 90%;
                  margin-top: 20px;
                }
            }

            .top {
                flex: 3;
                height: 100%;
                display: flex;
                align-items: center;
                justify-content: center;

                img {
                    width: 270px;
                    margin-bottom: 10px;

                    @include mobile {
                      width: 200px;
                    }
                }
            }

            .bottom {
                flex: 9;
                height: 100%;
                display: flex;
                align-items: center;
                flex-direction: column;

                h3 {
                    font-size: 20px;
                    font-weight: 300;
                    height: 50px;
                    text-align: center;
                    padding-left: 5px;
                    padding-right: 5px;

                    @include mobile {
                      height: 70px;
                      margin-top: 0px;
                    }

                    @include ipad {
                      height: 50px;
                      margin-top: 0px;
                    }
                }

                p {
                    width: 90%;
                    font-weight: 300;
                    font-size: 18px;
                    text-align: center;
                }

                p::-webkit-scrollbar {
                  display: none;
                }
            }
        }
    }
}

